--- a/index.html
+++ b/index.html
@@ -2,472 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Visualize n8n Workflows in Canva</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        header {
-            text-align: center;
-            padding: 60px 20px;
-            color: white;
-        }
-
-        header h1 {
-            font-size: 3em;
-            margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
-        }
-
-        header p {
-            font-size: 1.3em;
-            opacity: 0.95;
-        }
-
-        .content-card {
-            background: white;
-            border-radius: 15px;
-            padding: 40px;
-            margin: 30px 0;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-        }
-
-        .method-badge {
-            display: inline-block;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-
-        h2 {
-            color: #667eea;
-            font-size: 2.2em;
-            margin-bottom: 20px;
-        }
-
-        h3 {
-            color: #764ba2;
-            font-size: 1.6em;
-            margin: 30px 0 15px 0;
-        }
-
-        .benefits {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
-        }
-
-        .benefit-card {
-            background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
-            color: white;
-            padding: 25px;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-
-        .benefit-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .benefit-card h4 {
-            font-size: 1.3em;
-            margin-bottom: 10px;
-        }
-
-        .steps {
-            counter-reset: step-counter;
-        }
-
-        .step {
-            background: #f8f9fa;
-            padding: 25px;
-            margin: 20px 0;
-            border-left: 5px solid #667eea;
-            border-radius: 5px;
-            position: relative;
-            padding-left: 80px;
-        }
-
-        .step::before {
-            counter-increment: step-counter;
-            content: counter(step-counter);
-            position: absolute;
-            left: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.5em;
-            font-weight: bold;
-        }
-
-        .step h4 {
-            color: #667eea;
-            font-size: 1.4em;
-            margin-bottom: 10px;
-        }
-
-        .step p {
-            color: #555;
-            line-height: 1.8;
-        }
-
-        .step ul {
-            margin-top: 10px;
-            margin-left: 20px;
-        }
-
-        .step li {
-            margin: 8px 0;
-            color: #555;
-        }
-
-        .animation-demo {
-            background: #f8f9fa;
-            padding: 40px;
-            border-radius: 10px;
-            margin: 30px 0;
-            text-align: center;
-        }
-
-        .node {
-            display: inline-block;
-            padding: 20px 30px;
-            background: white;
-            border: 3px solid #667eea;
-            border-radius: 10px;
-            margin: 10px;
-            position: relative;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        }
-
-        .arrow {
-            display: inline-block;
-            width: 60px;
-            height: 3px;
-            background: #667eea;
-            position: relative;
-            margin: 0 10px;
-            vertical-align: middle;
-        }
-
-        .arrow::after {
-            content: '';
-            position: absolute;
-            right: -10px;
-            top: -6px;
-            width: 0;
-            height: 0;
-            border-left: 10px solid #667eea;
-            border-top: 6px solid transparent;
-            border-bottom: 6px solid transparent;
-        }
-
-        .tips {
-            background: #fff3cd;
-            border-left: 5px solid #ffc107;
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 5px;
-        }
-
-        .tips h4 {
-            color: #856404;
-            margin-bottom: 10px;
-        }
-
-        .cta {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 40px;
-            border-radius: 15px;
-            text-align: center;
-            margin: 40px 0;
-        }
-
-        .cta h3 {
-            color: white;
-            margin-bottom: 20px;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 15px 40px;
-            background: white;
-            color: #667eea;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: bold;
-            font-size: 1.1em;
-            transition: transform 0.3s ease;
-            margin: 10px;
-        }
-
-        .btn:hover {
-            transform: scale(1.05);
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px;
-            color: white;
-            opacity: 0.9;
-        }
-
-        @media (max-width: 768px) {
-            header h1 {
-                font-size: 2em;
-            }
-
-            .step {
-                padding-left: 20px;
-            }
-
-            .step::before {
-                position: static;
-                transform: none;
-                margin-bottom: 15px;
-            }
-
-            .node {
-                display: block;
-                margin: 20px auto;
-            }
-
-            .arrow {
-                display: block;
-                width: 3px;
-                height: 40px;
-                margin: 10px auto;
-            }
-
-            .arrow::after {
-                right: auto;
-                left: -6px;
-                top: auto;
-                bottom: -10px;
-                border-left: 6px solid transparent;
-                border-right: 6px solid transparent;
-                border-top: 10px solid #667eea;
-            }
-        }
-    </style>
+    <title>Tech Concept Explanations</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>🎨 Visualize n8n Workflows in Canva</h1>
-            <p>Create polished, professional animations for your automation tutorials</p>
-        </div>
-    </header>
-
     <div class="container">
-        <div class="content-card">
-            <span class="method-badge">Method 2: The Most Versatile</span>
-            <h2>Why Choose the Canva Method?</h2>
-            <p>Recreating your n8n workflow interface in Canva gives you complete creative control while remaining incredibly easy to use. Perfect for marketing videos, presentations, and social media content.</p>
-
-            <div class="benefits">
-                <div class="benefit-card">
-                    <h4>🎯 Clean & Professional</h4>
-                    <p>Non-realistic animations with a polished, branded look</p>
-                </div>
-                <div class="benefit-card">
-                    <h4>🚀 Easy to Use</h4>
-                    <p>No complex software or coding required</p>
-                </div>
-                <div class="benefit-card">
-                    <h4>🎨 Full Creative Control</h4>
-                    <p>Customize colors, timing, and animations</p>
-                </div>
-                <div class="benefit-card">
-                    <h4>📱 Multi-Platform</h4>
-                    <p>Works on desktop, tablet, and mobile</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <h2>Step-by-Step Guide</h2>
-            
-            <div class="steps">
-                <div class="step">
-                    <h4>Get Your Assets</h4>
-                    <p>Take clean screenshots of your n8n nodes:</p>
-                    <ul>
-                        <li>Screenshot the <strong>Trigger Node</strong> or <strong>Schedule Node</strong></li>
-                        <li>Screenshot the <strong>Telegram Node</strong></li>
-                        <li>Use Canva's background removal tool (Pro plan) to get clean PNG images</li>
-                        <li>Alternatively, use remove.bg for free background removal</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Set Up Your Canva Project</h4>
-                    <p>Create the perfect canvas for your animation:</p>
-                    <ul>
-                        <li>Open Canva and create a new <strong>Video</strong> project</li>
-                        <li>Choose your dimensions (1920x1080 for full HD is recommended)</li>
-                        <li>Set the background color to match n8n's canvas (#f5f5f5 or similar)</li>
-                        <li>Set your video duration (15-30 seconds is usually perfect)</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Place Your Nodes</h4>
-                    <p>Arrange your workflow elements:</p>
-                    <ul>
-                        <li>Drag your node PNG images onto the canvas</li>
-                        <li>Position them horizontally with space between them</li>
-                        <li>Ensure they're aligned properly using Canva's alignment tools</li>
-                        <li>Scale them to an appropriate size</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Draw the Connection</h4>
-                    <p>Connect your nodes visually:</p>
-                    <ul>
-                        <li>Use Canva's <strong>Line</strong> element from the Elements menu</li>
-                        <li>Draw a line connecting the Trigger Node to the Telegram Node</li>
-                        <li>Make it 4-6 pixels thick and match n8n's connection color</li>
-                        <li>Position it to connect the right side of one node to the left side of the next</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Animate the Flow</h4>
-                    <p>This is where the magic happens! Add animations to show the workflow in action:</p>
-                    <ul>
-                        <li><strong>Trigger Node:</strong> Select it and apply "Rise" or "Pop" animation</li>
-                        <li><strong>Connection Line:</strong> Apply "Wipe" animation to show it drawing from left to right</li>
-                        <li><strong>Data Flow:</strong> Add a small glowing circle and use "Motion Path" to make it travel along the line</li>
-                        <li><strong>Success Indicator:</strong> Add a green checkmark icon next to the Telegram node with a "Pop" animation</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Add Text & Polish</h4>
-                    <p>Make your animation informative and engaging:</p>
-                    <ul>
-                        <li>Add text boxes with explanations like "1. Workflow Triggered!"</li>
-                        <li>Animate text with "Fade" or "Rise" effects</li>
-                        <li>Add background music from Canva's audio library</li>
-                        <li>Review and adjust timing in the timeline</li>
-                    </ul>
-                </div>
-
-                <div class="step">
-                    <h4>Export & Share</h4>
-                    <p>Get your animation ready for the world:</p>
-                    <ul>
-                        <li>Click "Share" then "Download"</li>
-                        <li>Choose MP4 video format</li>
-                        <li>Select your preferred quality (1080p recommended)</li>
-                        <li>Download and use in your tutorials, presentations, or social media</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <h2>Visual Example</h2>
-            <div class="animation-demo">
-                <h3 style="color: #667eea; margin-bottom: 30px;">Your Workflow Animation Will Look Like This:</h3>
-                <div class="node">⏰ Schedule Node</div>
-                <div class="arrow"></div>
-                <div class="node">📱 Telegram Node</div>
-                <p style="margin-top: 30px; color: #666;">The data flows smoothly from trigger to action with animated transitions</p>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <h2>Pro Tips for Amazing Results</h2>
-            
-            <div class="tips">
-                <h4>💡 Animation Timing</h4>
-                <p>Keep animations quick (0.5-1 second each) to maintain viewer engagement. The entire sequence should complete in 5-10 seconds.</p>
-            </div>
-
-            <div class="tips">
-                <h4>💡 Color Consistency</h4>
-                <p>Use n8n's actual colors for nodes and connections to maintain authenticity. Viewers familiar with n8n will appreciate the accuracy.</p>
-            </div>
-
-            <div class="tips">
-                <h4>💡 Motion Path Tricks</h4>
-                <p>For the data flow animation, use a small glowing circle (20-30px) with a slight blur effect. This creates a professional "data packet" visualization.</p>
-            </div>
-
-            <div class="tips">
-                <h4>💡 Text Annotations</h4>
-                <p>Add numbered steps or brief explanations that appear in sync with each animation. This helps viewers understand what's happening.</p>
-            </div>
-
-            <div class="tips">
-                <h4>💡 Background Music</h4>
-                <p>Choose upbeat, tech-focused music from Canva's library. Keep the volume low (15-25%) so it doesn't overpower any voiceover.</p>
-            </div>
-        </div>
-
-        <div class="content-card">
-            <h2>What You'll Need</h2>
-            <h3>Required Tools</h3>
-            <ul style="margin-left: 40px; line-height: 2;">
-                <li>Canva account (Free version works, but Pro gives you background removal)</li>
-                <li>Screenshot tool (built into your OS)</li>
-                <li>Your n8n workflow</li>
-            </ul>
-
-            <h3 style="margin-top: 30px;">Optional Tools</h3>
-            <ul style="margin-left: 40px; line-height: 2;">
-                <li>Remove.bg for background removal (if not using Canva Pro)</li>
-                <li>Icon library like Flaticon for additional visual elements</li>
-                <li>Loom or OBS for screen recordings if you want hybrid content</li>
-            </ul>
-        </div>
-
-        <div class="cta">
-            <h3>Ready to Create Your First n8n Workflow Animation?</h3>
-            <p style="margin-bottom: 30px;">Follow this guide and you'll have a professional animation in under 30 minutes!</p>
-            <a href="https://www.canva.com" target="_blank" class="btn">Start in Canva →</a>
-            <a href="https://n8n.io" target="_blank" class="btn">Visit n8n →</a>
-        </div>
+        <h1>Animated Tech Concepts</h1>
+        <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
+        <ul>
+            <li><a href="concepts/1-docker-containerization.html">Docker Containerization</a></li>
+            <li><a href="concepts/2-ci-cd-pipeline.html">CI/CD Pipeline</a></li>
+            <li><a href="concepts/3-git-branching.html">Git Branching</a></li>
+            <li><a href="concepts/4-api-cycle.html">API Request/Response</a></li>
+            <li><a href="concepts/5-kubernetes-pods.html">Kubernetes Pods & Nodes</a></li>
+            <li><a href="concepts/6-css-box-model.html">CSS Box Model</a></li>
+            <li><a href="concepts/7-env-variables.html">Environment Variables</a></li>
+            <li><a href="concepts/8-git-merge-rebase.html">Git Merge vs. Rebase</a></li>
+            <li><a href="concepts/9-prometheus-scraping.html">Prometheus Scraping</a></li>
+            <li><a href="concepts/10-js-event-loop.html">JavaScript Event Loop</a></li>
+        </ul>
     </div>
-
-    <footer>
-        <div class="container">
-            <p>Created for n8n workflow creators and automation enthusiasts</p>
-            <p style="margin-top: 10px; opacity: 0.8;">Make your automation tutorials stand out with professional visualizations</p>
-        </div>
-    </footer>
 </body>
 </html>
