refactor: Standardize page structure to 4-part format

--- a/concepts/1-docker-containerization.html
+++ b/concepts/1-docker-containerization.html
@@ -10,10 +10,13 @@
     <div class="container">
         <h1>Concept: Docker Containerization</h1>
 
+        <!-- Part 1: Concept -->
+        <h2>🧠 The Concept</h2>
         <p>
             Docker works by packaging an application, along with all its necessary libraries and dependencies, into a single, isolated unit called a "container." This container can then run on any machine with Docker installed, ensuring it works the same everywhere.
         </p>
 
+        <!-- Mermaid Diagram is part of the concept -->
         <pre class="mermaid">
             graph TD
                 subgraph host["Host Machine"]
@@ -26,23 +29,54 @@
                 container --> deployed["Runs Anywhere!"]
         </pre>
 
-        <h2>Animation Idea (using Canva)</h2>
-        <p>
-            To visually explain this, you can create a short, looping video in Canva. This animation makes the concept of "packaging" tangible.
-        </p>
-        
-        <!-- Video placeholder -->
+        <!-- Part 2: Animation Idea -->
+        <h2>🎬 Animation Idea</h2>
+        <p>This short animation makes the abstract idea of "packaging" something you can see. It shows dependencies being bundled into a portable unit.</p>
         <video src="../animations/1-docker.mp4" autoplay loop muted playsinline style="width:100%; max-width:500px; display:block; margin: 20px auto; border-radius: 8px; background-color: #21262d;"></video>
 
-        <h3>Steps in Canva:</h3>
+        <!-- Part 3: Steps in Canva -->
+        <h2>📝 Steps in Canva</h2>
         <ol>
-            <li><strong>Objects:</strong> Start with an application icon (like a Python logo) and a few smaller "dependency" icons (gears, cubes) floating separately.</li>
-            <li><strong>Container:</strong> Have a shipping container icon use the <strong>"Drift"</strong> animation to slide in from the side.</li>
-            <li><strong>Packaging:</strong> As the container stops, animate the app and dependency icons to shrink and arrange themselves inside it using the <strong>"Pop"</strong> animation.</li>
+            <li><strong>Objects:</strong> Add icons for your application and its dependencies.</li>
+            <li><strong>Container:</strong> Add a shipping container icon and apply a <strong>"Drift"</strong> animation.</li>
+            <li><strong>Packaging:</strong> Animate the app/dependency icons to move inside the container using the <strong>"Pop"</strong> effect.</li>
+            <li><strong>Timing:</strong> Use the timeline to ensure the packaging happens *after* the container arrives.</li>
         </ol>
-        <p>
-            <strong>Why it works:</strong> This visually reinforces the core idea of Docker—packaging an application and all its needs into one self-contained, portable unit.
-        </p>
+
+        <!-- Part 4: Process in Detail -->
+        <h2>🖱️ Process in Detail</h2>
+        <p>Follow these clicks to create the animation in Canva:</p>
+        <ul>
+            <li><strong>Step 1: Setup your canvas.</strong> Go to Canva's homepage, click "Create a design" and choose "Video" (or a custom 1080x1080px size).</li>
+            <li><strong>Step 2: Find your elements.</strong> In the editor, click the "Elements" tab on the left.
+                <ul>
+                    <li>Search for "python logo" (or your app's icon) and add it.</li>
+                    <li>Search for "gear icon" and "cube" for dependencies. Add a few.</li>
+                    <li>Search for "shipping container" and choose a simple one.</li>
+                </ul>
+            </li>
+            <li><strong>Step 3: Animate the container.</strong>
+                <ul>
+                    <li>Click on the shipping container icon you added.</li>
+                    <li>In the top toolbar, click the "Animate" button.</li>
+                    <li>In the left panel, choose the "Drift" animation. You can adjust the direction if you like.</li>
+                </ul>
+            </li>
+            <li><strong>Step 4: Animate the app icons.</strong>
+                <ul>
+                    <li>Hold the `Shift` key and click on your app logo and all dependency icons to select them all at once.</li>
+                    <li>Click "Animate" from the top toolbar again.</li>
+                    <li>Choose the "Pop" animation.</li>
+                </ul>
+            </li>
+            <li><strong>Step 5: Adjust timing.</strong>
+                <ul>
+                    <li>At the bottom of the editor, click the "Show timing" button (or it may already be visible). This opens the timeline.</li>
+                    <li>You will see purple bars for each animation. Drag the start of the "Pop" animation bar so it begins *after* the container's "Drift" animation has finished.</li>
+                </ul>
+            </li>
+            <li><strong>Step 6: Download.</strong> Click "Share" (top right) → "Download". Choose "MP4 Video" as the file type and click "Download".</li>
+        </ul>
 
     </div>
 
