feat: Build all 10 concept pages and update navigation

--- a/concepts/1-docker-containerization.html
+++ b/concepts/1-docker-containerization.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <div id="menu-placeholder"></div>
     <div class="container">
         <h1>Concept: Docker Containerization</h1>
 
@@ -84,5 +85,6 @@
         import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         mermaid.initialize({ startOnLoad: true, theme: 'dark' });
     </script>
+    <script src="../shared-menu.js" defer></script>
 </body>
 </html>
