--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="menu-placeholder"></div>
     <div class="container">
         <h1>Animated Tech Concepts</h1>
         <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
@@ -22,5 +23,6 @@
             <li><a href="concepts/10-js-event-loop.html">JavaScript Event Loop</a></li>
         </ul>
     </div>
+    <script src="shared-menu.js" defer></script>
 </body>
 </html>
