--- a/concepts/6-css-box-model.html
+++ b/concepts/6-css-box-model.html
@@ -16,13 +16,9 @@
         <p>In web design, every HTML element is a rectangular box. The CSS Box Model describes the layers of this box: the `content` area, surrounded by `padding`, a `border`, and finally an outer `margin`.</p>
         <pre class="mermaid">
             graph TD
-                M(Margin) --> B(Border)
-                B --> P(Padding)
-                P --> C[Content]
-                style M fill:#333,stroke:#fff,stroke-width:2px
-                style B fill:#555,stroke:#fff,stroke-width:2px
-                style P fill:#777,stroke:#fff,stroke-width:2px
-                style C fill:#999,stroke:#fff,stroke-width:2px
+                M("Margin") --> B("Border")
+                B --> P("Padding")
+                P --> C["Content"]
         </pre>
 
         <!-- Part 2: Animation Idea -->
