--- a/concepts/8-git-merge-rebase.html
+++ b/concepts/8-git-merge-rebase.html
@@ -17,11 +17,11 @@
         <pre class="mermaid">
             graph TD
                 subgraph "Result of Git Merge"
-                    A[main] --> C(Merge Commit)
-                    B[feature] --> C
+                    A["main"] --> C("Merge Commit")
+                    B["feature"] --> C
                 end
                 subgraph "Result of Git Rebase"
-                    D[main] --> E[feature's work] --> F[re-applied]
+                    D["main"] --> E["feature's work"] --> F["re-applied"]
                 end
         </pre>
 
