fix(mermaid): Remove emojis for reliability and add guide

--- a/concepts/1-docker-containerization.html
+++ b/concepts/1-docker-containerization.html
@@ -21,7 +21,7 @@
         <pre class="mermaid">
             graph TD
                 subgraph host["Host Machine"]
-                    subgraph container["Docker Container 📦"]
+                    subgraph container["Docker Container"]
                         direction LR
                         app["Application Code"] --> deps["Dependencies & Libraries"]
                     end
