--- a/concepts/2-ci-cd-pipeline.html
+++ b/concepts/2-ci-cd-pipeline.html
@@ -18,8 +18,8 @@
             graph LR
                 A["Code Commit"] --> B("Build Server");
                 B --> C{"Run Tests"};
-                C -- "Pass" --> D(("Deploy to Production 🚀"));
-                C -- "Fail" --> E["Notify Developers ⚠️"];
+                C -- "Pass" --> D(("Deploy to Production"));
+                C -- "Fail" --> E["Notify Developers"];
         </pre>
 
         <!-- Part 2: Animation Idea -->
