messed up the mermaid in html vioew

--- a/concepts/6-css-box-model.html
+++ b/concepts/6-css-box-model.html
@@ -52,6 +52,14 @@
             <li><strong>Step 5: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
         </ul>
     </div>
+    <script type="module">
+        import mermaid from '/lib/mermaid/mermaid.esm.min.mjs';
+        mermaid.initialize({ 
+            startOnLoad: true, 
+            theme: 'dark',
+            securityLevel: 'strict'
+        });
+    </script>
     <script src="../shared-menu.js" defer></script>
 </body>
 </html>
