--- a/concepts/1-docker-containerization.html
+++ b/concepts/1-docker-containerization.html
@@ -82,8 +82,12 @@
     </div>
 
     <script type="module">
-        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
-        mermaid.initialize({ startOnLoad: true, theme: 'dark' });
+        import mermaid from '/lib/mermaid/mermaid.esm.min.mjs';
+        mermaid.initialize({
+            startOnLoad: true,
+            theme: 'dark',
+            securityLevel: 'strict'
+        });
     </script>
     <script src="../shared-menu.js" defer></script>
 </body>
