--- a/concepts/8-git-merge-rebase.html
+++ b/concepts/8-git-merge-rebase.html
@@ -58,6 +58,14 @@
             <li><strong>Step 4: Download.</strong> Click "Share" → "Download" → "MP4 Video".</li>
         </ul>
     </div>
+    <script type="module">
+        import mermaid from '/lib/mermaid/mermaid.esm.min.mjs';
+        mermaid.initialize({ 
+            startOnLoad: true, 
+            theme: 'dark',
+            securityLevel: 'strict'
+        });
+    </script>
     <script src="../shared-menu.js" defer></script>
 </body>
 </html>
