--- a/concepts/1-docker-containerization.html
+++ b/concepts/1-docker-containerization.html
@@ -82,7 +82,7 @@
     </div>
 
     <script type="module">
-        import mermaid from '/lib/mermaid/mermaid.esm.min.mjs';
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
         mermaid.initialize({
             startOnLoad: true,
             theme: 'dark',
