--- a/concepts/9-prometheus-scraping.html
+++ b/concepts/9-prometheus-scraping.html
@@ -60,9 +60,9 @@
         </ul>
     </div>
     <script type="module">
-        import mermaid from '/lib/mermaid/mermaid.esm.min.mjs';
-        mermaid.initialize({ 
-            startOnLoad: true, 
+        import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+        mermaid.initialize({
+            startOnLoad: true,
             theme: 'dark',
             securityLevel: 'strict'
         });
