feat: Add root redirect and reorganize folders

--- a/index.html
+++ b/index.html
@@ -1,28 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Tech Concept Explanations</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=5_Symbols/index.html" />
 </head>
 <body>
-    <div id="menu-placeholder"></div>
-    <div class="container">
-        <h1>Animated Tech Concepts</h1>
-        <p>A collection of complex topics explained with simple diagrams using Mermaid.js.</p>
-        <ul>
-            <li><a href="concepts/1-docker-containerization.html">Docker Containerization</a></li>
-            <li><a href="concepts/2-ci-cd-pipeline.html">CI/CD Pipeline</a></li>
-            <li><a href="concepts/3-git-branching.html">Git Branching</a></li>
-            <li><a href="concepts/4-api-cycle.html">API Request/Response</a></li>
-            <li><a href="concepts/5-kubernetes-pods.html">Kubernetes Pods & Nodes</a></li>
-            <li><a href="concepts/6-css-box-model.html">CSS Box Model</a></li>
-            <li><a href="concepts/7-env-variables.html">Environment Variables</a></li>
-            <li><a href="concepts/8-git-merge-rebase.html">Git Merge vs. Rebase</a></li>
-            <li><a href="concepts/9-prometheus-scraping.html">Prometheus Scraping</a></li>
-            <li><a href="concepts/10-js-event-loop.html">JavaScript Event Loop</a></li>
-        </ul>
-    </div>
-    <script src="shared-menu.js" defer></script>
+    <p>If you are not redirected automatically, follow this <a href="5_Symbols/index.html">link to the main page</a>.</p>
 </body>
 </html>
