--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -12,8 +12,13 @@
         <h1>Concept: Git Branching</h1>
 
         <!-- Part 1: Concept -->
-        <h2>🧠 The Concept</h2>
-        <p>Git branching allows developers to work on new features or bug fixes in an isolated environment without affecting the main codebase (the `main` branch). Once the work is complete, the feature branch can be merged back into the main branch.</p>
+        <div class="copy-container">
+            <h2>🧠 The Concept</h2>
+            <button class="copy-btn" data-copy-target="#concept-text-3">Copy Text</button>
+        </div>
+        <div id="concept-text-3">
+            <p>Git branching allows developers to work on new features or bug fixes in an isolated environment without affecting the main codebase (the `main` branch). Once the work is complete, the feature branch can be merged back into the main branch.</p>
+        </div>
         <pre class="mermaid">
             gitGraph
                commit
@@ -25,6 +30,15 @@
                commit id: "fix: bug in main"
                merge feature-branch
         </pre>
+
+        <!-- AI Image Prompt -->
+        <div class="copy-container">
+            <h2>🎨 AI Image Prompt</h2>
+            <button class="copy-btn" data-copy-target="#image-prompt-3">Copy Prompt</button>
+        </div>
+        <div id="image-prompt-3">
+            <p>Two distinct git branches, a main branch and a feature branch, showing commits as circles on a line, then merging back together. Tech diagram, vector style.</p>
+        </div>
 
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
@@ -66,5 +80,6 @@
         });
     </script>
     <script src="../shared-menu.js" defer></script>
+    <script src="../copy-button.js" defer></script>
 </body>
 </html>
