--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -12,14 +12,28 @@
         <h1>Concept: CSS Box Model</h1>
 
         <!-- Part 1: Concept -->
-        <h2>🧠 The Concept</h2>
-        <p>In web design, every HTML element is a rectangular box. The CSS Box Model describes the layers of this box: the `content` area, surrounded by `padding`, a `border`, and finally an outer `margin`.</p>
+        <div class="copy-container">
+            <h2>🧠 The Concept</h2>
+            <button class="copy-btn" data-copy-target="#concept-text-6">Copy Text</button>
+        </div>
+        <div id="concept-text-6">
+            <p>In web design, every HTML element is a rectangular box. The CSS Box Model describes the layers of this box: the `content` area, surrounded by `padding`, a `border`, and finally an outer `margin`.</p>
+        </div>
         <pre class="mermaid">
             graph TD
                 M("Margin") --> B("Border")
                 B --> P("Padding")
                 P --> C["Content"]
         </pre>
+
+        <!-- AI Image Prompt -->
+        <div class="copy-container">
+            <h2>🎨 AI Image Prompt</h2>
+            <button class="copy-btn" data-copy-target="#image-prompt-6">Copy Prompt</button>
+        </div>
+        <div id="image-prompt-6">
+            <p>A set of nested, concentric boxes labeled Margin, Border, Padding, and Content. Technical diagram, clean, minimalist, showing layers.</p>
+        </div>
 
         <!-- Part 2: Animation Idea -->
         <h2>🎬 Animation Idea</h2>
@@ -61,5 +75,6 @@
         });
     </script>
     <script src="../shared-menu.js" defer></script>
+    <script src="../copy-button.js" defer></script>
 </body>
 </html>
