feat(prompts): Add persona and context to all AI image prompts

--- a/5_Symbols/concepts/1-docker-containerization.html
+++ b/5_Symbols/concepts/1-docker-containerization.html
@@ -41,7 +41,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-1">Copy Prompt</button>
         </div>
         <div id="image-prompt-1">
-            <p>Clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. Minimalist, vector style, on a neutral background.</p>
+            <p>As a video production assistant creating assets for an online video course, generate clean, simple icons for a tech diagram: a python logo, a gear icon, a cube icon, and a shipping container. The style should be minimalist, vector, clear, and suitable for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
