--- a/5_Symbols/concepts/10-js-event-loop.html
+++ b/5_Symbols/concepts/10-js-event-loop.html
@@ -36,7 +36,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-10">Copy Prompt</button>
         </div>
         <div id="image-prompt-10">
-            <p>Three labeled boxes: Call Stack, Web API, and Callback Queue. A small task block moves between them in a sequence. JavaScript event loop diagram, minimalist, vector style.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a minimalist diagram of the JavaScript event loop with three labeled boxes: Call Stack, Web API, and Callback Queue, and a task block moving between them. The style should be a clean, vector diagram for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
