--- a/5_Symbols/concepts/2-ci-cd-pipeline.html
+++ b/5_Symbols/concepts/2-ci-cd-pipeline.html
@@ -33,7 +33,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-2">Copy Prompt</button>
         </div>
         <div id="image-prompt-2">
-            <p>Minimalist tech icons for a flowchart: code brackets, a gear, a checkmark, and a rocket ship. Simple, clean vector style.</p>
+            <p>As a video production assistant creating assets for an online video course, generate minimalist tech icons for a flowchart: code brackets, a gear, a checkmark, and a rocket ship. The style should be simple, clean, vector, and easy to understand in an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
