--- a/5_Symbols/concepts/3-git-branching.html
+++ b/5_Symbols/concepts/3-git-branching.html
@@ -37,7 +37,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-3">Copy Prompt</button>
         </div>
         <div id="image-prompt-3">
-            <p>Two distinct git branches, a main branch and a feature branch, showing commits as circles on a line, then merging back together. Tech diagram, vector style.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a diagram showing two distinct git branches (main and feature) with commits as circles on a line, then merging. The style should be a clean, vector, tech flowchart suitable for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
