--- a/5_Symbols/concepts/4-api-cycle.html
+++ b/5_Symbols/concepts/4-api-cycle.html
@@ -35,7 +35,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-4">Copy Prompt</button>
         </div>
         <div id="image-prompt-4">
-            <p>A laptop icon labeled Client and a server icon labeled Server, with a data packet arrow moving from client to server (Request) and another arrow moving back (Response). Network diagram, minimalist.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a minimalist network diagram with a laptop icon (Client) and a server icon (Server). Show a data packet arrow for the 'Request' and another for the 'Response'. The style should be clean, vector, and clear for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
