--- a/5_Symbols/concepts/5-kubernetes-pods.html
+++ b/5_Symbols/concepts/5-kubernetes-pods.html
@@ -44,7 +44,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-5">Copy Prompt</button>
         </div>
         <div id="image-prompt-5">
-            <p>Large simple squares labeled Worker Node, with smaller circles labeled Pod being placed inside them by a central controller. Cloud computing diagram, vector, minimalist.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a cloud computing diagram. Show large simple squares (Worker Nodes) and smaller circles (Pods) being placed inside them. The style should be minimalist, vector, and easy to understand for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
