--- a/5_Symbols/concepts/6-css-box-model.html
+++ b/5_Symbols/concepts/6-css-box-model.html
@@ -32,7 +32,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-6">Copy Prompt</button>
         </div>
         <div id="image-prompt-6">
-            <p>A set of nested, concentric boxes labeled Margin, Border, Padding, and Content. Technical diagram, clean, minimalist, showing layers.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a technical diagram of a set of nested, concentric boxes labeled Margin, Border, Padding, and Content. The style should be clean, minimalist, and clearly show the layers for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
