--- a/5_Symbols/concepts/8-git-merge-rebase.html
+++ b/5_Symbols/concepts/8-git-merge-rebase.html
@@ -36,7 +36,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-8">Copy Prompt</button>
         </div>
         <div id="image-prompt-8">
-            <p>Two diagrams side-by-side comparing Git Merge (two branches joining at a new commit) and Git Rebase (one branch's commits moving to the end of another). Clean, vector, tech flowchart.</p>
+            <p>As a video production assistant creating assets for an online video course, generate two diagrams side-by-side comparing Git Merge and Git Rebase. The style should be a clean, vector, tech flowchart, perfect for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
