--- a/5_Symbols/concepts/9-prometheus-scraping.html
+++ b/5_Symbols/concepts/9-prometheus-scraping.html
@@ -38,7 +38,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-9">Copy Prompt</button>
         </div>
         <div id="image-prompt-9">
-            <p>A central Prometheus logo icon, with several smaller application icons around it. A magnifying glass moves from Prometheus to an app and back. Monitoring system diagram, vector style.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a monitoring system diagram with a central Prometheus logo and several smaller application icons. A magnifying glass should be shown moving between them. The style should be clean, vector, and clear for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
