--- a/5_Symbols/concepts/7-env-variables.html
+++ b/5_Symbols/concepts/7-env-variables.html
@@ -36,7 +36,7 @@
             <button class="copy-btn" data-copy-target="#image-prompt-7">Copy Prompt</button>
         </div>
         <div id="image-prompt-7">
-            <p>A file icon labeled .env and a Docker container icon. A key icon moves from the file to the container, replacing placeholder text. Tech diagram, vector style.</p>
+            <p>As a video production assistant creating assets for an online video course, generate a tech diagram with a file icon (.env) and a Docker container icon. A key icon should be shown moving from the file to the container. The style should be clean, vector, and suitable for an educational animation.</p>
         </div>
 
         <!-- Part 2: Animation Idea -->
